--- a/zh-CN/mozorg/contribute.lang
+++ b/zh-CN/mozorg/contribute.lang
@@ -203,7 +203,7 @@ Mozilla 的人稍后会联系你告知如何加入我们。在等待期间，可
 
 
 ;Get involved with Mozilla by making Firefox, Thunderbird and other projects <a href="%(l10n_url)s">available in your language</a>. Also help us tell the world about how Mozilla is building a better Internet by <a href="%(l10n_web_url)s">translating content</a> on our web sites.
-通过将 Firefox, Thunderbird 和其他项目 <a href="%(l10n_url)s">翻译为你的语言</a> 加入 Mozilla。还可以通过翻译我们网站上的内容，帮助我们告诉世界 Mozilla 是如何构建一个更美好的互联网的。
+通过将 Firefox, Thunderbird 和其他项目 <a href="%(l10n_url)s">翻译为你的语言</a> 加入 Mozilla。还可以通过 <a href="%(l10n_web_url)s">翻译我们网站上的内容</a>，帮助我们告诉世界 Mozilla 是如何构建一个更美好的互联网的。
 
 
 ;The Mozilla Developer Network is the hub for information about Mozilla technologies. Help <a href="%(dev_url)s">make our documentation better</a> by writing new content, correcting existing material or translating content into new languages.
