l10n: km, updated snippets.lang by Vannak Eng
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@110016 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/km/snippets.lang
+++ b/km/snippets.lang
@@ -2,27 +2,27 @@
 
 
 ;Take Firefox anywhere you go! The latest Firefox for Android is live and ready for you to enjoy. <a href="%s">Get it now</a>.
-យក Firefox ទៅ​គ្រប់​កន្លែង​ដែល​អ្នក​ទៅ! កំណែ​ចុងក្រោយ​បំផុត​របស់ Firefox សម្រាប់ Android ឥឡូវ​នេះ​មាន​ហើយ​សម្រាប់​អ្នក ។ <a href="%s">យក​វា​ឥឡូវ​នេះ ។</a>
+យក Firefox ទៅ​គ្រប់​កន្លែង​ដែល​អ្នក​ទៅ! កំណែ​ចុងក្រោយ​បំផុត​របស់ Firefox សម្រាប់ Android ឥឡូវ​នេះ​មាន​ហើយ​សម្រាប់​អ្នក ។ <a href="%s">យក​វា​ឥឡូវ​នេះ ។</a>
 
 
 ;Now that you've got the latest version, <a href="%s">learn about all the cool things</a> you can do with your Firefox.
-អ្នក​មាន​កំណែ​ចុងក្រោយ​បំផុត​ហើយ <a href="%s">សិក្សា​ពី​ចំណុច​ពិសេសៗ</a> ដែល​អ្នក​អាច​ធ្វើ​បាន​ជាមួយ Firefox របស់​អ្នក ។
+អ្នក​មាន​កំណែ​ចុងក្រោយ​បំផុត​ហើយ <a href="%s">សិក្សា​ពី​ចំណុច​ពិសេសៗ</a> ដែល​អ្នក​អាច​ធ្វើ​បាន​ជាមួយ Firefox របស់​អ្នក ។
 
 
 ;You're not on the latest version of Firefox. <a href="%s">Upgrade today</a> to get the best of the Web!
-អ្នក​មិន​បាន​ប្រើ​កំណែ​ចុងក្រោយ​របស់ Firefox ទេ ។ <a href="%s">ធ្វើ​បច្ចុប្បន្ន​ឥឡូវ​នេះ</a> ដើម្បី​ទទួល​បាន​នូវ​ភាព​ប្រសើរ​ថ្មីៗ!
+អ្នក​មិន​បាន​ប្រើ​កំណែ​ចុងក្រោយ​របស់ Firefox ទេ ។ <a href="%s">ធ្វើ​បច្ចុប្បន្ន​ឥឡូវ​នេះ</a> ដើម្បី​ទទួល​បាន​នូវ​ភាព​ប្រសើរ​ថ្មីៗ!
 
 
 ;Get the latest Firefox features first in <a href="%s">Aurora</a>.
-យក​លក្ខណៈ​បន្ថែម​មុន​គេ​របស់ Firefox នៅ <a href="%s">Aurora</a> ។
+យក​លក្ខណៈ​បន្ថែម​មុន​គេ​របស់ Firefox នៅ <a href="%s">Aurora</a> ។
 
 
 ;Get a sneak preview of the future of Firefox. <a href="%s">Download Firefox Aurora</a> and test the latest features.
-មើល​ជាមុន​នូវ​អនាគត​របស់ Firefox ។ <a href="%s">ទាញយក Firefox Aurora</a> និង​សាកល្បង​លក្ខណៈ​បន្ថែម​ចុងក្រោយ​របស់​វា ។
+មើល​ជាមុន​នូវ​អនាគត​របស់ Firefox ។ <a href="%s">ទាញយក Firefox Aurora</a> និង​សាកល្បង​លក្ខណៈ​បន្ថែម​ចុងក្រោយ​របស់​វា ។
 
 
 ;Before Firefox there's Beta, and before Beta there's Aurora. <a href="%s">Try Firefox Aurora</a> now for the latest cutting edge features.
-មុន​ពេល​ចេញ​កំណែ Firefox មាន​កំណែ Beta ហើយ​នៅ​មុន​កំណែ Beta មាន​កំណែ Aurora. <a href="%s">សាកល្បង​ Firefox Aurora</a> ឥឡូវ​នេះ នូវ​លក្ខណៈ​បន្ថែម​ចុងក្រោយ​បំផុត ។
+មុន​ពេល​ចេញ​កំណែ Firefox មាន​កំណែ Beta ហើយ​នៅ​មុន​កំណែ Beta មាន​កំណែ Aurora. <a href="%s">សាកល្បង​ Firefox Aurora</a> ឥឡូវ​នេះ នូវ​លក្ខណៈ​បន្ថែម​ចុងក្រោយ​បំផុត ។
 
 
 ;<a href="%s">Become a Firefox Affiliate</a> and get everything you need to share Firefox with the world!
@@ -30,15 +30,15 @@
 
 
 ;Firefox is proudly non-profit and free to innovate on your behalf without compromise. <a href="%s">Learn more</a> about our mission.
-Firefox មាន​មោទនភាព​មិន​រក​ប្រាក់​កម្រៃ និង​ច្នៃ​ប្រឌិត​ថ្មី​សម្រាប់​អ្នក​ដោយ​មិនមាន​ការ​ដោះដូរ ។ <a href="%s">សិក្សា​បន្ថែម</a> ពី​បេសកកម្ម​របស់​យើង ។
+Firefox មាន​មោទនភាព​មិន​រក​ប្រាក់​កម្រៃ និង​ច្នៃ​ប្រឌិត​ថ្មី​សម្រាប់​អ្នក​ដោយ​មិនមាន​ការ​ដោះដូរ ។ <a href="%s">សិក្សា​បន្ថែម</a> ពី​បេសកកម្ម​របស់​យើង ។
 
 
 ;Fast, flexible and secure, Firefox is the only browser that puts you first. <a href="%s">Learn more</a> about what makes us different by design.
-លឿន អាច​​ប្រែប្រូល​បាន និង​មាន​សុវត្ថិភាព  Firefox គឺ​ជា​កម្មវិធី​រុករក​តែ​មួយ​គត់​ដែល​ទុក​អ្នក​ជា​សំខាន់ ។ <a href="%s">សិក្សា​បន្ថែម</a> ពី​អ្វី​ដែល​ធ្វើ​ឲ្យ​យើង​រចនា​ប្លែក​ពី​គេ ។
+លឿន អាច​​ប្រែប្រូល​បាន និង​មាន​សុវត្ថិភាព  Firefox គឺ​ជា​កម្មវិធី​រុករក​តែ​មួយ​គត់​ដែល​ទុក​អ្នក​ជា​សំខាន់ ។ <a href="%s">សិក្សា​បន្ថែម</a> ពី​អ្វី​ដែល​ធ្វើ​ឲ្យ​យើង​រចនា​ប្លែក​ពី​គេ ។
 
 
 ;<a href="%s">Download Firefox on your Android tablet</a> and put the power of the Web right in your hands. Get it now.
-<a href="%s">ទាញយក Firefox នៅ​លើ​តាប្លែត Android របស់​អ្នក</a> និង​គ្រប់គ្រង​តំបន់​បណ្ដាញ​នៅ​ក្នុង​ដៃ​អ្នក ។ យក​វា​ឥឡូវ​នេះ ។
+<a href="%s">ទាញយក Firefox នៅ​លើ​តាប្លែត Android របស់​អ្នក</a> និង​គ្រប់គ្រង​តំបន់​បណ្ដាញ​នៅ​ក្នុង​ដៃ​អ្នក ។ យក​វា​ឥឡូវ​នេះ ។
 
 
 ;Keep your plugins up to date and stay safe online with <a href="%s">Plugin Check</a>.
@@ -50,11 +50,11 @@ Keep your Firefox in style. Dress it up in the latest <a href="%s">Personas</a>.
 
 
 ;Too many tabs? Reclaim your browser from the clutter with <a href="%s">Panorama</a>.
-មាន​ផ្ទាំង​ច្រើន​ពេក? ទាមទារ​កម្មវិធី​រុករក​តំបន់​បណ្ដាញ​របស់​អ្នក​មក​វិញ​ជាមួយ <a href="%s">Panorama</a> ។
+មាន​ផ្ទាំង​ច្រើន​ពេក? ទាមទារ​កម្មវិធី​រុករក​តំបន់​បណ្ដាញ​របស់​អ្នក​មក​វិញ​ជាមួយ <a href="%s">Panorama</a> ។
 
 
 ;No two Firefox users are alike. <a href="%s">Add any button to your browser</a> or remove the ones you don't use. Right-click on home and select Customize.
-មិនមាន​អ្នក​ប្រើ Firefox ណា​មួយ​ដូច​គ្នា​នោះ​ទេ ។ <a href="%s">បន្ថែម​ប៊ូតុង​ណា​មួយ​ទៅ​ឲ្យ​កម្មវិធី​រុករក​តំបន់​បណ្ដាញ​របស់​អ្នក</a> ឬ​​យក​វា​ចេញ ។ ចុច​កណ្ដុរ​ស្ដាំ​លើ ផ្ទះ ហើយ​ជ្រើស​យក ប្ដូរ​តាម​បំណង ។
+មិនមាន​អ្នក​ប្រើ Firefox ណា​មួយ​ដូច​គ្នា​នោះ​ទេ ។ <a href="%s">បន្ថែម​ប៊ូតុង​ណា​មួយ​ទៅ​ឲ្យ​កម្មវិធី​រុករក​តំបន់​បណ្ដាញ​របស់​អ្នក</a> ឬ​​យក​វា​ចេញ ។ ចុច​កណ្ដុរ​ស្ដាំ​លើ ផ្ទះ ហើយ​ជ្រើស​យក ប្ដូរ​តាម​បំណង ។
 
 
 ;Dress up your Firefox with Personas. Roll over to try, click to apply. Or visit the <a href="%s">gallery</a> for thousands more!
@@ -62,7 +62,7 @@ Dress up your Firefox with Personas. Roll over to try, click to apply. Or visit 
 
 
 ;Get a first look at the latest features, even before they go to Beta. <a href="%s">Download Firefox Aurora.</a>
-មើល​លក្ខណៈ​បន្ថែម​ថ្មីៗ​បំផុត ដែល​មិនទាន់​មាន​នៅ​ក្នុង Beta ។ <a href="%s">ទាញយក Firefox Aurora ។</a>
+មើល​លក្ខណៈ​បន្ថែម​ថ្មីៗ​បំផុត ដែល​មិនទាន់​មាន​នៅ​ក្នុង Beta ។ <a href="%s">ទាញយក Firefox Aurora ។</a>
 
 
 ;<a href="%s">Download Firefox Aurora</a> to test features and help us determine what makes it to Beta.
@@ -70,59 +70,58 @@ Dress up your Firefox with Personas. Roll over to try, click to apply. Or visit 
 
 
 ;Get in early and help shape the future of Firefox. <a href="%s">Download Firefox Aurora.</a>
-ចូលរួម​កំណត់​អនាគត​របស់ Firefox ។ <a href="%s">ទាញយក Firefox Aurora.</a>
+ចូលរួម​កំណត់​អនាគត​របស់ Firefox ។ <a href="%s">ទាញយក Firefox Aurora.</a>
 
 
 ;Firefox for Android is now optimized for the way you browse on tablets. <a href="%s">Get the power of the Web at your fingertips</a>.
-Firefox for Android is now optimized for the way you browse on tablets. <a href="%s">Get the power of the Web at your fingertips</a>.{ok}
+Firefox សម្រាប់ Android ត្រូវ​បាន​ប្ដូរ​ទៅតាម​របៀប​ដែល​អ្នក​រុករក​នៅ​លើ​តាប្លែត​របស់​អ្នក ។ <a href="%s">រុករក​អ៊ីនធឺណិត​ដោយ​ប្រើ​ចង្អុល​ដៃ​របស់​អ្នក</a> ។
 
 
 ;Download Firefox on your Android tablet and put the power of the Web right in your hands. <a href="%s">Get it now</a>.
-Download Firefox on your Android tablet and put the power of the Web right in your hands. <a href="%s">Get it now</a>.{ok}
+ទាញយក Firefox នៅ​លើ​តាប្លែត Android របស់​អ្នក ។ <a href="%s">យក​វា​ឥឡូវ​នេះ</a> ។
 
 
 ;<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
-<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
+<a href="%">ទាញយក Firefox Beta</a> ផ្ដល់​មតិ​អ្នក​ប្រើ និង​ជួយ​ធ្វើ​ឲ្យ Firefox បន្ទាប់​កាន់​តែ​ប្រសើរ​សម្រាប់​អ្នក​ប្រើ ៤៥០ លាន​នាក់​របស់​យើង ។
 
 
 ;Test features, refine and polish them and help us make our next version better than ever. <a href="%">Download Firefox Beta today!</a>
-Test features, refine and polish them and help us make our next version better than ever. <a href="%">Download Firefox Beta today!</a>
+សាកល្បង​លក្ខណៈ​បន្ថែម កែ​សម្រួល និង​ដុខ​ខាត់​វា និង​ជួយ​ធ្វើ​ឲ្យ​កំណែ​បន្ទាប់​របស់​យើង​កាន់​តែ​ប្រសើរ​ ។ <a href="%">ទាញយក Firefox Beta ឥឡូវ​នេះ!</a>
 
 
 ;Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
-Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
+ចូលចិត្ត Firefox? ចង់​ជួយ​ធ្វើ​ឲ្យ​កំណែ​ក្រោយ​របស់​វា​កាន់​តែ​ប្រសើរ? <a href="%">ទាញ​យក Firefox Beta</a> និង​ផ្ដល់​មតិ​អ្នក​ប្រើ​ឥឡូវ​នេះ!
 
 
 ;Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
-Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
+តើ​អ្នក​កំពុង​តែ​ប្រើ Firefox Beta ចុងក្រោយ​មែន​ទេ? <a href="%">យក​វា​ឥឡូវ​នេះ</a> និង​ជួយ​យើង​សាកល្បង​លក្ខណៈ​បន្ថែម​ចុងក្រោយ​បំផុត ។
 
 
 ;Not on the latest Firefox Beta? <a href="%">Get it today</a> to stay on top of what we're working on for our next version.
-Not on the latest Firefox Beta? <a href="%">Get it today</a> to stay on top of what we're working on for our next version.
-
+មិន​ទាន់​បាន​ប្រើ Firefox Beta ចុងក្រោយ​ទេ? <a href="%">យក​វា​ឥឡូវ​នេះ</a>​ដើម្បី​ទទួល​បាន​ភាព​ឈាន​មុខ​ចំពោះ​អ្វី​ដែល​យើង​កំពុង​តែ​ធ្វើ​សម្រាប់​កំណែ​បន្ទាប់ ។
 
 ;Want to share your feedback? <a href="%">Find out how</a> and help make the next version of Firefox even more awesome.
-Want to share your feedback? <a href="%">Find out how</a> and help make the next version of Firefox even more awesome.
+ចង់​ចែក​រំលែក​មតិយោបល់​របស់​អ្នក? <a href="%">ស្វែងយល់​បន្ថែម</a> និង​ជួយ​ធ្វើ​ឲ្យ​កំណែ​បន្ទាប់​របស់ Firefox កាន់​តែ​ប្រសើរ ។
 
 
 ;Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us put the final tweaks on our next version.
-Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us put the final tweaks on our next version.
+អ្នក​ប្រើ Firefox Beta ៖ កុំ​ភ្លេច<a href="%">ផ្ដល់​មតិ​យោបល់</a>ដើម្បី​ជួយ​ពួក​យើង​ក្នុង​ការ​ដាក់អ្វី​នៅ​ក្នុង​កំណែ​បន្ទាប់ ។
 
 
 ;Help make the next version of Firefox even more awesome. <a href="%">Become an Affiliate</a> and share Firefox Beta with your friends.
-Help make the next version of Firefox even more awesome. <a href="%">Become an Affiliate</a> and share Firefox Beta with your friends.
+ជួយ​ធ្វើ​ឲ្យ​កំណែ​ក្រោយ​របស់ Firefox កាន់​តែ​អស្ចារ្យ ។ <a href="%">ក្លាយ​ជា​អ្នក​ផ្សព្វផ្សាយ</a> និង​ចែករំលែក Firefox Beta ជាមួយ​មិត្ត​ភក្ដិ​របស់​អ្នក ។
 
 
 ;Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
-Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
+អញ្ជើញ​មិត្ត​ភក្ដិ​ចូលរួម​សាកល្បង​លក្ខណៈ​បន្ថែម​ថ្មី​របស់ Firefox​ ។ <a href="%">ក្លាយ​ជា​អ្នក​ផ្សព្វផ្សាយ</a> និង​ចែករំលែក Firefox Aurora ថ្ងៃ​នេះ  ។
 
 
 ;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
-Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+កំពុង​ប្រើន Firefox នៅ​លើ​ម៉ាស៊ីន​កុំព្យូទ័រ​ច្រើន? ឥឡូវ​នេះ​អ្នក​អាច​ធ្វើ​សមកាលកម្ម​កម្មវិធី​បន្ថែម​របស់​អ្នក​រវាង​កុំព្យូទ័រ​ទាំងនោះ ។ <a href="%">ស្វែងយល់​បន្ថែម​ពី​របស់​ធ្វើ​ឲ្យ​សមកាលកម្ម​សកម្ម ។</a>
 
 
 ;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
-Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+លឿន លឿន លឿន ។ <a %s>Firefox សម្រាប់ Android ទើប​តែ​ទទួល​បាន​ការ​ធ្វើ​ឲ្យ​ប្រសើរ​បំផុត</a> ។ ជួយ​យើង​ដើម្បី​ចែក​រំលែក​ដំណឹង​នេះ ។
 
 
 ;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
