--- a/km/newsletter.lang
+++ b/km/newsletter.lang
@@ -22,11 +22,11 @@
 
 
 ;Whoops! Be sure to enter a valid email address.
-អ៊ូប! សូម​ប្រាកដ​ថា​អ្នក​បាន​បញ្ចូល​អាសយដ្ឋាន​អ៊ីមែល​ត្រឹមត្រូវ ។
+អ៊ូប! សូម​ប្រាកដ​ថា​អ្នក​បាន​បញ្ចូល​អាសយដ្ឋាន​អ៊ីមែល​ត្រឹមត្រូវ ។
 
 
 ;Please read the Mozilla Privacy Policy and agree by checking the box.
-សូម​អាន​គោល​នយោបាយ​ឯកជន​របស់ Mozilla និង​យល់ព្រម​ដោយ​គូស​ធីក​លើ​ប្រអប់​ ។
+សូម​អាន​គោល​នយោបាយ​ឯកជន​របស់ Mozilla និង​យល់ព្រម​ដោយ​គូស​ធីក​លើ​ប្រអប់​ ។
 
 
 ;I agree to the <a href="%s">Privacy Policy</a>
@@ -38,7 +38,7 @@
 
 
 ;We will only send you Mozilla-related information.
-យើង​នឹង​ផ្ញើ​ឲ្យ​អ្នក​តែ​ព័ត៌មាន​ដែល​ទាក់ទង​ទៅ​និង Mozilla ប៉ុណ្ណោះ ។
+យើង​នឹង​ផ្ញើ​ឲ្យ​អ្នក​តែ​ព័ត៌មាន​ដែល​ទាក់ទង​ទៅ​និង Mozilla ប៉ុណ្ណោះ ។
 
 
 ;Thanks for Subscribing!
@@ -46,15 +46,15 @@
 
 
 ;We look forward to soon begin sharing tips &amp; tricks on getting the most out of Firefox, as well as exciting news about Mozilla and how we’re working to create a better Web.
-យើង​សង្ឃឹម​ថា​នឹងអាច​ចែក​រំលែក​ដំណោះ​ស្រាយ​ខ្លីៗ​ក្នុង​ការ​ប្រើប្រាស់ Firefox យ៉ាង​មាន​ប្រសិទ្ធិភាព រួម​ទាំង​ព័ត៌មាន​រីករាយ និង​ព័ត៌មាន​ពី​របៀប​ដែល​ពួក​យើង​កំពុង​តែ​ធ្វើ​ដើម្បី​ឲ្យ​តំបន់​បណ្ដាញ​កាន់​តែ​ប្រសើរ ។
+យើង​សង្ឃឹម​ថា​នឹងអាច​ចែក​រំលែក​ដំណោះ​ស្រាយ​ខ្លីៗ​ក្នុង​ការ​ប្រើប្រាស់ Firefox យ៉ាង​មាន​ប្រសិទ្ធិភាព រួម​ទាំង​ព័ត៌មាន​រីករាយ និង​ព័ត៌មាន​ពី​របៀប​ដែល​ពួក​យើង​កំពុង​តែ​ធ្វើ​ដើម្បី​ឲ្យ​តំបន់​បណ្ដាញ​កាន់​តែ​ប្រសើរ ។
 
 
 ;Subscribe to monthly updates and keep current with Mozilla news, including the latest tips and tricks for getting the most out of your Firefox browser. It’s the perfect way for us to keep in touch!
-ជាវ​ប្រចាំ​បច្ចុប្បន្ន​ភាព​ប្រចាំ​ខែ និងទទួល​បាន​ព័ត៌មាន​ថ្មីៗ​ពី Mozilla រួម​បញ្ចូល​ទាំង​ដំណោះ​ស្រាយ​ខ្លីៗ​ក្នុង​ការ​ប្រើប្រាស់​កម្មវិធី​រុករក Firefox យ៉ាង​មាន​ប្រសិទ្ធិភាព ។ វា​ជា​វិធី​មួយ​យ៉ាង​ប្រសើរ​បំផុត​ក្នុង​ការ​រក្សា​ទំនាក់ទំនង​ជាមួយ​គ្នា!
+ជាវ​ប្រចាំ​បច្ចុប្បន្ន​ភាព​ប្រចាំ​ខែ និងទទួល​បាន​ព័ត៌មាន​ថ្មីៗ​ពី Mozilla រួម​បញ្ចូល​ទាំង​ដំណោះ​ស្រាយ​ខ្លីៗ​ក្នុង​ការ​ប្រើប្រាស់​កម្មវិធី​រុករក Firefox យ៉ាង​មាន​ប្រសិទ្ធិភាព ។ វា​ជា​វិធី​មួយ​យ៉ាង​ប្រសើរ​បំផុត​ក្នុង​ការ​រក្សា​ទំនាក់ទំនង​ជាមួយ​គ្នា!
 
 
 ;We just sent you a confirmation message by email. Click on the confirmation link in this email to validate your subscription to this mailing list.
-យើង​ទើប​តែ​ផ្ញើ​សារ​អះអាង​ទៅ​អ្នក​តាម​រយៈ​អ៊ីមែល ។ ចុច​លើ​តំណ​អះអាង​ក្នុង​អ៊ីមែល​នេះ​ដើម្បី​បញ្ជាក់​ការ​ជាវ​ជា​ប្រចាំ​របស់​ចំពោះ​បញ្ជី​សំបុត្រ​រួម​នេះ ។
+យើង​ទើប​តែ​ផ្ញើ​សារ​អះអាង​ទៅ​អ្នក​តាម​រយៈ​អ៊ីមែល ។ ចុច​លើ​តំណ​អះអាង​ក្នុង​អ៊ីមែល​នេះ​ដើម្បី​បញ្ជាក់​ការ​ជាវ​ជា​ប្រចាំ​របស់​ចំពោះ​បញ្ជី​សំបុត្រ​រួម​នេះ ។
 
 
 ;Read all about it in our <span>newsletter</span>
@@ -62,7 +62,7 @@
 
 
 ;Your newsletter subscription has been confirmed.
-Your newsletter subscription has been confirmed.
+ការ​ជាវ​ប្រចាំ​ព្រឹត្តិបត្តិ​ព័ត៌មាន​របស់​អ្នក​បាន​បញ្ជាក់ ។
 
 
 ;Format
@@ -70,111 +70,108 @@ Your newsletter subscription has been confirmed.
 
 
 ;You’re All Set! <span>But Wait, There’s More</span>
-You’re All Set! <span>But Wait, There’s More</span>
+រួចរាល់​ហើយ! <span>តែ​ចាំ​មួយ​ភ្លែត មាន​បន្ថែម​ទៀត</span>
 
 
 ;Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
-Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
+ចង់​ទទួល​បាន​ព័ត៌មាន​ដែល​ទាក់ទង? ប្រាប់​យើង​បន្ថែម​ពី​ខ្លួន​អ្នក ។ ហើយ​ខណៈ​​ដែល​អ្នក​នៅ​ទីនេះ សូម​ចុះ​ឈ្មោះ​សម្រាប់​ព័ត៌មាន Mozilla ផ្សេង​ទៀត ។
 
 
 ;Firefox & You
-Firefox & You
+Firefox & អ្នក
 
 
 ;Our Other Newsletters:
-Our Other Newsletters:
+ព្រឹត្តិបត្តិ​ព័ត៌មាន​ផ្សេង​ទៀត​របស់​យើង ៖
 
 
 ;Get the latest tips and tricks for getting the most out of your favorite browser.
-Get the latest tips and tricks for getting the most out of your favorite browser.
+យក​គន្លឹះ​ចុងក្រោយ​បំផុត​សម្រាប់​កម្មវិធី​រុករក​អ៊ីនធឺណិត​សំណព្វ​ចិត្ត​របស់​អ្នក ។
 
 
 ;Firefox Mobile
-Firefox Mobile
+Firefox សម្រាប់​ទូរសព្ទ
 
 
 ;Learn about the hottest new add-ons and features for Firefox mobile.
-Learn about the hottest new add-ons and features for Firefox mobile.
+សិក្សា​បន្ថែម​ពី​កម្មវិធី​បន្ថែម និង​លក្ខណៈ​បន្ថែម​ថ្មី​បំផុត​សម្រាប់ Firefox សម្រាប់​ទូរសព្ទ ។
 
 
 ;Beta News
-Beta News
+ព័ត៌មាន Beta
 
 
 ;Read about the latest features for Firefox desktop and mobile before the final release.
-Read about the latest features for Firefox desktop and mobile before the final release.
+អាន​ព័ត៌មាន​លក្ខណៈ​បន្ថែម​ចុងក្រោយ​បំផុត​សម្រាប់  Firefox លើ​កុំព្យូទ័រ និង​ទូរសព្ទ​មុន​ពេល​ចេញ​កំណែ​ចុងក្រោយ ។
 
 
 ;Let’s Be Friends!
-Let’s Be Friends!
+តោះ​ធ្វើ​ជាមិត្ត​និង​គ្នា !
 
 
 ;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
-Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
-
+Firefox ក៏​មាន​នៅ​លើ​បណ្ដាញ​ទំនាក់ទំនង​សង្គម​ចំណូល​ចិត្ត​របស់​អ្នក​ដែរ។ ភ្ជាប់​ជាមួយ​យើង និង​ចូលរួម​ការ​ភិក្សា។
 
 ;Manage your <span>Newsletter Subscriptions</span>
-Manage your <span>Newsletter Subscriptions</span>
+គ្រប់គ្រង<span>ការ​ជាវ​ប្រចាំ​ព្រឹត្តិបត្តិ​ព័ត៌មាន</span>​របស់​អ្នក
 
 
 ;Subscribe
-Subscribe
+ជាវ​ប្រចាំ
 
 
 ;Unsubscribe
-Unsubscribe
+ឈប់​ជាវ​ប្រចាំ
 
 
 ;Check here if you’d like to be removed from all Mozilla emails
-Check here if you’d like to be removed from all Mozilla emails
+ធីក​ទីនេះ បើ​អ្នក​ចង់​ដក​ចេញ​ពី​អ៊ីមែល​របស់ Mozilla ទាំងអស់
 
 
 ;Remove me from all Mozilla emails
-Remove me from all Mozilla emails
+យក​ខ្ញុំ​ចេញ​ពី​អ៊ីមែល Mozilla ទាំងអស់
 
 
 ;Save Preferences
-Save Preferences
+រក្សា​ទុក​ចំណូល​ចិត្ត
 
 
 ;Thanks for updating your email preferences.
-Thanks for updating your email preferences.
-
+អរគុណ​សម្រាប់​ការ​ធ្វើ​បច្ចុប្បន្ន​ភាព​ចំណូល​ចិត្ត​អ៊ីមែល​របស់​អ្នក ។
 
 ;You've been unsubscribed.
-You've been unsubscribed.
+អ្នក​បាន​ឈប់​ជាវ​ប្រចាំ ។
 
 
 ;We’re sorry to see you go. Would you mind telling us why you’re leaving?
-We’re sorry to see you go. Would you mind telling us why you’re leaving?
+យើង​ពិត​ជា​សោក​ស្ដាយ​ណាស់​ដែល​អ្នក​ចាក​ចេញ ។ តើ​អ្នក​អាច​ប្រាប់​ពួក​យើង​បាន​ទេ ហេតុ​អ្វី​បាន​ជា​អ្នក​ចាកចេញ?
 
 
 ;You send too many emails.
-You send too many emails.
+អ្នក​ផ្ញើ​អ៊ីមែល​ច្រើន​ពេក​មក​ខ្ញុំ ។
 
 
 ;Your content wasn't relevant to me.
-Your content wasn't relevant to me.
+មាតិការ​របស់​អ្នក​មិន​ទាក់ទង​ជាមួយ​ខ្ញុំ ។
 
 
 ;Your email design was too hard to read.
-Your email design was too hard to read.
+ការ​រចនា​អ៊ីមែល​របស់​អ្នក​ពិបាក​ក្នុង​ការ​អាន​ណាស់ ។
 
 
 ;I didn't sign up for this.
-I didn't sign up for this.
-
+ខ្ញុំ​មិន​បាន​ចុះ​ឈ្មោះ​ទេ ។
 
 ;I'm keeping in touch with Mozilla on Facebook and Twitter instead.
-I'm keeping in touch with Mozilla on Facebook and Twitter instead.
+ខ្ញុំ​នឹង​នៅ​តែ​មាន​ទំនាក់ទំនង​ជាមួយ Mozilla តាម​រយៈ Facebook និង Twitter ។
 
 
 ;Submit
-Submit
+ដាក់​ស្នើ
 
 
 ;Thanks for telling us why you’re leaving.
-Thanks for telling us why you’re leaving.
+អរគុណ​សម្រាប់​ការ​ប្រាប់​ពួក​យើង​ពី​មូលហេតុ​ដែល​អ្នក​ឈប់​ប្រើ ។
 
 
 ;Mozilla Newsletters
@@ -191,5 +188,3 @@ You'll receive an email from mozilla@e.mozilla.org to confirm your subscription.
 
 ;Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
 Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
-
-
