l10n: fr, contribute page update by MozFR team
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@110018 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/fr/mozorg/contribute.lang
+++ b/fr/mozorg/contribute.lang
@@ -1,4 +1,4 @@
-;Get Involved: Volunteer Opportunities at Mozilla
+﻿;Get Involved: Volunteer Opportunities at Mozilla
 Rejoignez-nous&nbsp;: voici les possibilités de contributions bénévoles pour Mozilla
 
 
@@ -171,130 +171,128 @@ Suivez ces liens pour en apprendre davantage sur l'aide aux utilisateurs de <a h
 
 
 ;Interested in helping others get the most out of using Firefox and other Mozilla projects? Our support process relies on enthusiastic contributors like you. Find out more about <a href="%(fx_support_url)s">supporting Firefox</a> and <a href="%(tb_support_url)s">Thunderbird</a> users. You can also join our <a href="%(army_url)s">Army of Awesome</a> by helping users on Twitter.
-Interested in helping others get the most out of using Firefox and other Mozilla projects? Our support process relies on enthusiastic contributors like you. Find out more about <a href="%(fx_support_url)s">supporting Firefox</a> and <a href="%(tb_support_url)s">Thunderbird</a> users. You can also join our <a href="%(army_url)s">Army of Awesome</a> by helping users on Twitter.
+Vous aimeriez aider les autres à mieux utiliser Firefox et les autres projets Mozilla&nbsp;? Notre programme d'aide aux utilisateurs s'appuie sur des contributeurs aussi enthousiastes que vous. Découvrez comment participer au <a  href="%(fx_support_url)s">support utilisateur de Firefox</a> ou de <a  href="%(tb_support_url)s">Thunderbird</a>. Vous pouvez aussi rejoindre notre <a href="%(army_url)s">Army of Awesome</a> en aidant les utilisateurs sur Twitter.
 
 
 ;We believe in the power of well-made and widely distributed art, and want to make it possible for artists to cover the web and people with designs inspired by Mozilla. Take part in a <a href="%(creative_url)s">Creative Collective challenge</a> or <a href="%(zazzle_url)s">add a t-shirt design</a> to our Community Store.
-We believe in the power of well-made and widely distributed art, and want to make it possible for artists to cover the web and people with designs inspired by Mozilla. Take part in a <a href="%(creative_url)s">Creative Collective challenge</a> or <a href="%(zazzle_url)s">add a t-shirt design</a> to our Community Store.
+Nous croyons en la force de la création artistique et en sa large diffusion, et nous voulons que les artistes puissent inonder le Web et le monde de graphismes inspirés par Mozilla. Relevez le défi de <a href="%(creative_url)s">Creative Collective</a> ou <a href="%(zazzle_url)s">ajoutez un motif de tee-shirt</a> à notre magasin de la Communauté.
 
 
 ;Localization
-Localization
+Localisation
 
 
 ;Accessibility is about making things work for everyone. Help <a href="%(access_url)s">create tools and resources for Firefox end users with disabilities</a> and help <a href="%(access_wiki)s">make web content available to non visual agents</a> such as screen readers.
-Accessibility is about making things work for everyone. Help <a href="%(access_url)s">create tools and resources for Firefox end users with disabilities</a> and help <a href="%(access_wiki)s">make web content available to non visual agents</a> such as screen readers.
+L'accessibilité consiste à rendre les choses fonctionnelles pour tout le monde. Aidez à <a  href="%(access_url)s">créer des outils et des ressources pour les utilisateurs de Firefox qui ont des handicaps</ a> et aidez à <a  href="%(access_wiki)s">rendre le contenu du Web disponible aux outils d'aides aux non-voyants</ a> tels que les lecteurs d'écran.
 
 
 ;<a href="%(dev_intro_url)s">Developers can help</a> Mozilla by adding new features, making our technology smaller and faster and making development easier for others. You can find many developers on <a href="%(irc_url)s">IRC</a> so stop by and ask questions to learn more. Our web sites are <a href="%(webdev_blog)s">open for web ninjas</a> to hack on too.
-<a href="%(dev_intro_url)s">Developers can help</a> Mozilla by adding new features, making our technology smaller and faster and making development easier for others. You can find many developers on <a href="%(irc_url)s">IRC</a> so stop by and ask questions to learn more. Our web sites are <a href="%(webdev_blog)s">open for web ninjas</a> to hack on too.
+<a  href="%(dev_intro_url)s">Les développeurs peuvent aider</a> Mozilla en ajoutant de nouvelles fonctionnalités, en rendant nos technologies plus agiles et rapides ou encore en facilitant les procédures de développement pour les autres contributeurs. De nombreux contributeurs sont présents sur <a  href="%(irc_url)s">IRC</a>, n'hésitez pas à venir y faire un tour et à poser des questions pour en savoir plus. Nos sites web sont eux aussi <a href="%(webdev_blog)s">ouverts aux Mac Gyver du Web</a>.
 
 
 ;Help us spread the word about how Firefox and other Mozilla projects are building a better Internet. Share Firefox with the world by <a href="%(affiliates_url)s">becoming an Affiliate</a> and then check out our <a href="%(marketing_url)s">Marketing Guide</a> for more ways to get involved.
-Help us spread the word about how Firefox and other Mozilla projects are building a better Internet. Share Firefox with the world by <a href="%(affiliates_url)s">becoming an Affiliate</a> and then check out our <a href="%(marketing_url)s">Marketing Guide</a> for more ways to get involved.
+Parlez de Mozilla autour de vous&nbsp;! Racontez à votre entourage comment Firefox et les autres projets de Mozilla contribuent à un meilleur Internet. Partagez Firefox avec le monde en <a  href="%(affiliates_url)s">rejoignant notre programme d'affiliation</a> et jetez un œil à notre <a href="%(marketing_url)s">Guide Marketing</a> pour découvrir d'autres moyens de vous impliquer.
 
 
 ;Quality assurance testing is one of the easiest ways to get started with Mozilla and is a great way to get familiar with our code and tools. Help us <a href="%(qa_bugs_url)s">hunt down bugs</a> in Firefox, <a href="%(qa_web_url)s">test Mozilla web sites</a> or learn more about <a href="http://quality.mozilla.org/">other testing opportunities</a>.
-Quality assurance testing is one of the easiest ways to get started with Mozilla and is a great way to get familiar with our code and tools. Help us <a href="%(qa_bugs_url)s">hunt down bugs</a> in Firefox, <a href="%(qa_web_url)s">test Mozilla web sites</a> or learn more about <a href="http://quality.mozilla.org/">other testing opportunities</a>.
+Contribuer aux tests d'assurance qualité est l'un des points d'entrée les plus accessibles pour s'impliquer dans le projet Mozilla, et c'est très utile pour se familiariser avec notre code et nos outils. Aidez-nous à <a  href="%(qa_bugs_url)s">identifier des bogues</a> sur Firefox, <a  href="%(qa_web_url)s">tester les sites Mozilla</a> ou découvrez d'autres <a href="http://quality.mozilla.org/">possibilités de tests</a>.
 
 
 ;Be part of the research team&mdash;whether you want to be a <a href="%(survey_url)s">participant in an upcoming study</a>, <a href="%(test_email)s">conduct usability tests</a> on your own or <a href="%(test_pilot)s">analyze Test Pilot data</a>&mdash;we’d love to have you join us!
-Be part of the research team&mdash;whether you want to be a <a href="%(survey_url)s">participant in an upcoming study</a>, <a href="%(test_email)s">conduct usability tests</a> on your own or <a href="%(test_pilot)s">analyze Test Pilot data</a>&mdash;we’d love to have you join us!
+Faites partie de l'équipe de recherche&mdash; que vous vouliez <a  href="%(survey_url)s">participer à une prochaine étude</a>, <a href="%(test_email)s">effectuer des tests d'utilisabilité</a> de votre propre chef ou <a href="%(test_pilot)s">analyser des données Test Pilot</a>&mdash; nous serions ravis de vous compter parmi nous&nbsp;!
 
 
 ;Get involved with Mozilla by making Firefox, Thunderbird and other projects <a href="%(l10n_url)s">available in your language</a>. Also help us tell the world about how Mozilla is building a better Internet by <a href="%(l10n_web_url)s">translating content</a> on our web sites.
-Get involved with Mozilla by making Firefox, Thunderbird and other projects <a href="%(l10n_url)s">available in your language</a>. Also help us tell the world about how Mozilla is building a better Internet by <a href="%(l10n_web_url)s">translating content</a> on our web sites.
+Soyez impliqué dans Mozilla en <a href="%(l10n_url)s">localisant dans votre langue</a> Firefox, Thunderbird et les autres projets. Parlez de Mozilla autour de vous&nbsp;! Racontez à votre entourage comment Mozilla contribue à un meilleur Internet en <a href="%(l10n_web_url)s">localisant le contenu</a> de nos sites web.
 
 
 ;The Mozilla Developer Network is the hub for information about Mozilla technologies. Help <a href="%(dev_url)s">make our documentation better</a> by writing new content, correcting existing material or translating content into new languages.
-The Mozilla Developer Network is the hub for information about Mozilla technologies. Help <a href="%(dev_url)s">make our documentation better</a> by writing new content, correcting existing material or translating content into new languages.
+Le Mozilla Developer Network est le centre d'information sur les technologies Mozilla. Aidez-nous à <a  href="%(dev_url)s">améliorer notre documentation</a> en écrivant de nouveaux contenus, en corrigeant les documents existants ou en traduisant son contenu dans de nouvelles langues.
 
 
 ;Help build a generation of webmakers&mdash;moving people from using the web making the web&mdash;by teaching others how to code and how the web works. <a href="%(moz_webmaker)s ">Explore what the Mozilla Webmaker project is all about</a> or get started teaching others by <a href="%(webmaker)s">setting up an event in your community today</a>.
-Help build a generation of webmakers&mdash;moving people from using the web making the web&mdash;by teaching others how to code and how the web works. <a href="%(moz_webmaker)s ">Explore what the Mozilla Webmaker project is all about</a> or get started teaching others by <a href="%(webmaker)s">setting up an event in your community today</a>.
+Aidez-nous à bâtir une génération de développeurs web mobiles utilisant le Web pour faire le Web&mdash;en apprenant aux autres le fonctionnement du Web et à coder. <a href="%(moz_webmaker)s ">Découvrez le projet Webmaker de Mozilla</a> ou commencez à apprendre aux autres en <a  href="%(webmaker)s">mettant en place un événement dans votre communauté dès aujourd'hui</a>.
 
 
 ;Firefox and other Mozilla-based applications have a powerful extension system that allow you to make small tweaks or make major additions to your programs. If you’re new to this technology, learn how to <a href="%(addons_url)s">build an add-on</a>. For experienced developers, find out how to <a href="%(addons_wiki)s">become an AMO editor</a>.
-Firefox and other Mozilla-based applications have a powerful extension system that allow you to make small tweaks or make major additions to your programs. If you’re new to this technology, learn how to <a href="%(addons_url)s">build an add-on</a>. For experienced developers, find out how to <a href="%(addons_wiki)s">become an AMO editor</a>.
+Firefox et d'autres applications basées sur Mozilla possèdent un puissant système d'extension qui vous permet d'effectuer de petites ou grandes modifications à vos programmes. Si cette technologie est nouvelle pour vous, découvrez la <a href="%(addons_url)s">programmation d'un module complémentaire</ a>. Pour les développeurs expérimentés, <a href="%(addons_wiki)s">devenez un éditeur d'AMO</ a>.
 
 
 ;Area of interest?
-Area of interest?
+Centre d'intéret&nbsp;?
 
 
 ;I need help with a Firefox issue
-I need help with a Firefox issue
+J'ai besoin d'aide, j'ai un problème avec Firefox
 
 
 ;An error occurred in our system. Please try again later.
-An error occurred in our system. Please try again later.
+Une erreur s'est produite dans notre système. Veuillez réessayer plus tard.
 
 
 ;I have a suggestion for Firefox
-I have a suggestion for Firefox
+Proposition d'amélioration de Firefox
 
 
 ;Facebook
-Facebook
+Facebook {OK}
 
 
 ;Education
-Education
+Éducation
 
 
 ;Firefox Affiliates
-Firefox Affiliates
+Programme d'affiliation de Firefox
 
 
 ;Developer Documentation
-Developer Documentation
+Documents pour les développeurs
 
 
 ;Mozilla
-Mozilla
+Mozilla {OK}
 
 
 ;Thank you for signing up!
-Thank you for signing up!
+Merci pour votre inscription&nbsp;!
 
 
 ;Menu
-Menu
+Menu {OK}
 
 
 ;Web Development
-Web Development
+Développement web
 
 
 ;You must agree to the privacy policy
-You must agree to the privacy policy
+Vous devez accepter la politique de confidentialité
 
 
 ;Visual Design
-Visual Design
+Graphisme et Design
 
 
 ;I’m okay with you handling this info as you explain in your <a href="%s">Privacy Policy</a>
-I’m okay with you handling this info as you explain in your <a href="%s">Privacy Policy</a>
+J'accepte que vous utilisiez ces informations conformément à votre <a href="%s">politique de confidentialité</a>
 
 
 ;Twitter
-Twitter
+Twitter {OK}
 
 
 ;We are sorry, but there was a problem with our system. Please try again later!
-We are sorry, but there was a problem with our system. Please try again later!
+Nous sommes désolés, mais il y a un problème avec notre système. Veuillez réessayer plus tard&nbsp;!
 
 
 ;Other
-Other
+Autre
 
 
 ;Marketing
-Marketing
+Marketing {OK}
 
 
 ;Testing and QA
-Testing and QA
-
-
+Tests et FAQ
