--- a/templates/main.lang
+++ b/templates/main.lang
@@ -526,3 +526,7 @@ Area of interest?
 Menu
 
 
+;Sorry. This number isn't valid. Please enter a U.S. phone number or <a href="%s" onclick="%s">download directly from Google Play.</a>
+Sorry. This number isn't valid. Please enter a U.S. phone number or <a href="%s" onclick="%s">download directly from Google Play.</a>
+
+
